test/positive/feature_implicitthisformethods.java

public class feature_implicitthisformethods {
  public feature_implicitthisformethods() {}
  public int m1() {
    return 42;
  }
  public int m2() {
    return m1();
  }
}

